# cxxrtl-vpi

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
cxxrtl_vpi/: __init__.py  cocotb_build.py
docs/: design.md  vpi-coverage.md
examples/cocotb_counter/: Makefile  README.md  counter.v  run_cocotb.sh  test_counter.py
examples/cocotb_genarray/: genmod.v  run_cocotb.sh  test_gen.py
examples/cocotb_hier/: run_cocotb.sh  test_top.py  top.v
examples/cocotb_mem/: mem.v  run_cocotb.sh  test_mem.py
examples/cocotb_slang/: run_cocotb.sh  test_us.py  us.sv
include/: vpi_user.h
include/cxxrtl_vpi/: model.h  sim.h
src/: harness.cc  model.cc  vpi_provider.cc
tests/: run_callbacks.sh  run_getput.sh  run_hierarchy.sh  test_callbacks.cc  test_conformance.cc  test_getput.cc  test_hierarchy.cc  test_smoke.sh
